# autobike_racing_control

./: mode.md  racing_control.cpp  racing_control.h
obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/include/: obstacle_detector.h  yolo-fastestv2.h
obstacle_detector/model/: coco.names  test-opt.param
obstacle_detector/msg/: Copyimage.msg  PerceptionTarget.msg  PerceptionTargets.msg  Point.msg  Roi.msg  Target.msg
obstacle_detector/src/: obstacle_detector.cpp  yolo-fastestv2.cpp  yolo_obstacles_detector.cpp
racing_control_final/include/: racing_control_final_default.h  racing_control_final_faster.h  racing_control_final_stable.h
racing_control_final/src/: racing_control_final_default.cpp  racing_control_final_faster.cpp  racing_control_final_stable.cpp
sessions/: session2_line_avoid.cpp  session2_line_avoid.h  session4_wait_direction.cpp  session4_wait_direction.h  session5_turn_integrated.cpp  session5_turn_integrated.h
