<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>0.0.1</version>
  <description>Obstacle detector using NanoDet model in ROS.</description>

  <maintainer email="initsakura@gmail.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>onnxruntime</depend>

      <build_depend>message_generation</build_depend>
      <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
